--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-placeholder"> 
-                    <span><img src="assets/myphoto.jpeg" alt="MyPhoto"></span>
+                    <span><img src="assets/MyPhoto.jpeg" alt="MyPhoto"></span>
                 </div>
             </div>
         </section>
@@ -162,7 +162,6 @@
                                         o usuário, como mensagens de erro claras. O design foi pensado para ser simples e atraente, facilitando a navegação e transmitindo 
                                         confiança ao usuário.
                                 <div class="project-tech">
-                                    <span class="tech-tag">JavaScript</span>
                                     <span class="tech-tag">HTML</span>
                                     <span class="tech-tag">CSS</span>
                                 </div>
@@ -182,7 +181,6 @@
                                      consumo de conteúdo e ajustes pessoais, focando na usabilidade e na satisfação do usuário durante todo o uso da plataforma.
                                 </p>
                                 <div class="project-tech">
-                                    <span class="tech-tag">JavaScript</span>
                                     <span class="tech-tag">HTML</span>
                                     <span class="tech-tag">CSS</span>
                                 </div>
