--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-placeholder"> 
-                    <span><img src="assets/MyPhoto.jpeg" alt="MyPhoto"></span>
+                    <span><img src="assets/Rayane.png" alt="MyPhoto"></span>
                 </div>
             </div>
         </section>
