--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rayane Fonseca - Desenvolvedora Web</title>
+    <title>Rayane - Desenvolvedora Web</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,7 +83,7 @@
                             crescer profissional e academicamente, sempre com foco em 
                             construir habilidades que me permitam contribuir de forma 
                             significativa para o mercado de trabalho e, principalmente, 
-                            para meus objetivos pessoais na área de tecnologia.Além disso, 
+                            para meus objetivos pessoais na área de tecnologia. Além disso, 
                             também estou cursando Tecnologia em Logística pela UNINTER, o 
                             que complementa ainda mais meu conhecimento na interação entre 
                             processos logísticos e tecnologias aplicadas, ampliando minha 
@@ -128,32 +128,39 @@
         </section>
         <section id="projects" class="projects">       
                 <div class="container">
-                    <h2 class="section">Meus projetos</h2>
+                    <h2 class="section-title">Meus projetos</h2>
                     <div class="project-grid">
                         <article class="project-card">
-                            <img class="project-image-hover" src="assets/RickandMorty.png" alt="Preview do Projeto" />
+                            <div class="project-image">
+                                <div class="project-placeholder">
+                                    <img src="assets/api.png">
+                                </div>
+                            </div>
                             <div class="project-content">
-                                <h3>Projeto com API</h3>
+                                <h3>Projeto com API </h3>
                                 <p>Um projeto com API é uma solução moderna que permite a integração de diferentes sistemas por meio da troca de dados em tempo real. 
                                     Nesse projeto, utilizamos uma API para conectar nossa aplicação a um serviço externo, possibilitando acessar informações atualizadas 
                                     e relevantes de forma automática. Isso torna a experiência do usuário mais rica e dinâmica, pois os dados são carregados e apresentados
                                     de maneira prática e eficiente. Além disso, o uso de APIs facilita a expansão e a personalização do projeto, trazendo inovação 
-                                    e flexibilidade ao desenvolvimento.
+                                    e flexibilidade ao desenvolvimento. 
                                 </p>
                                 <div class="project-tech">
-                                    <span class="tech-tag">JavaScript</span>
                                     <span class="tech-tag">HTML</span>
                                     <span class="tech-tag">CSS</span>
+                                    <span class="tech-tag">JavaScript</span>
                                 </div>
                                 <div class="project-link">
-                                    <a href="https://github.com/Rayane-Fonseca/RickandMorty-API.git" class="project-link" target="_blank">Ver código</a>
-                                    <a href="https://rayane-fonseca.github.io/RickandMorty-API/" class="project-link" target="_blank">Ver demo</a>
+                                    <a href="https://github.com/Rayane-Fonseca/RickandMorty-API.git" class="project-link" target="_blank">Ver Demo</a>
+                                    <a href="https://rayane-fonseca.github.io/RickandMorty-API/" class="project-link" target="_blank">Ver código</a>
                                 </div>
                             </div>
                         </article>
-
                         <article class="project-card">
-                            <img class="project-image-hover" src="assets/LoginPage.png" alt="Preview do Projeto" />
+                            <div class="project-image">
+                                <div class="project-placeholder">
+                                    <img src="assets/login.png">
+                                </div>
+                            </div>
                             <div class="project-content">
                                 <h3>Página de Login</h3>
                                 <p>Uma página de login é a porta de entrada para uma aplicação, permitindo que usuários autorizados acessem suas funcionalidades de forma segura.
@@ -161,18 +168,23 @@
                                         A implementação incluiu validação de dados para garantir que os campos estejam preenchidos corretamente, além de feedback visual para 
                                         o usuário, como mensagens de erro claras. O design foi pensado para ser simples e atraente, facilitando a navegação e transmitindo 
                                         confiança ao usuário.
+                                </p>
                                 <div class="project-tech">
                                     <span class="tech-tag">HTML</span>
                                     <span class="tech-tag">CSS</span>
                                 </div>
                                 <div class="project-link">
-                                    <a href="https://github.com/Rayane-Fonseca/LoginPage.git" class="project-link" target="_blank">Ver código</a>
-                                    <a href="https://rayane-fonseca.github.io/LoginPage/" class="project-link" target="_blank">Ver demo</a>
+                                    <a href="https://github.com/Rayane-Fonseca/LoginPage.git" class="project-link" target="_blank">Ver Demo</a>
+                                    <a href="https://rayane-fonseca.github.io/LoginPage/" class="project-link" target="_blank">Ver código</a>
                                 </div>
                             </div>
                         </article>
                         <article class="project-card">
-                            <img class="project-image-hover" src="assets/Starming.png" alt="Preview do Projeto" />
+                            <div class="project-image">
+                                <div class="project-placeholder">
+                                    <img src="assets/streaming.png">
+                                </div>
+                            </div>
                             <div class="project-content">
                                 <h3>Projeto de Streaming</h3>
                                 <p>Eu desenvolvi um projeto de streaming com três páginas principais: uma página de login para autenticar usuários com segurança, uma 
@@ -185,8 +197,8 @@
                                     <span class="tech-tag">CSS</span>
                                 </div>
                                 <div class="project-link">
-                                    <a href="https://github.com/Rayane-Fonseca/Starming.git" class="project-link" target="_blank">Ver código</a>
-                                    <a href="https://rayane-fonseca.github.io/Starming/" class="project-link" target="_blank">Ver demo</a>
+                                    <a href="https://github.com/Rayane-Fonseca/Starming.git" class="project-link" target="_blank">Ver Demo</a>
+                                    <a href="https://rayane-fonseca.github.io/Starming/" class="project-link" target="_blank">Ver código</a>
                                 </div>
                             </div>
                         </article>
@@ -198,18 +210,6 @@
             <div class="container">
                 <h2 class="section-title">Experiência</h2>
                 <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3>Estoquista</h3>
-                            <h4>Auto Peças Azoberte</h4>
-                            <span class="timeline-date">2021 - 2024</span>
-                            <p>Cursando tecnologia em Logística com: <br>   
-                                    <br>- 3 anos e meio de experiência em gestão de inventário e organização de processos logísticos;<br>
-                                    - Proficiente em otimização de estoques, análise de dados e implementação de práticas eficientes para melhorar a performance operacional;<br>
-                                    - Habilidades em trabalho em equipe, resolução de problemas e uso de ferramentas tecnológicas para suporte às atividades logísticas.<br></p>
-                        </div>
-                    </div>
                     <div class="timeline-item">
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
@@ -235,15 +235,15 @@
             </div>
             <div class="contact-methods">
                 <div class="contact-method">
-                    <span class="contact-icon">📧</span>
-                    <a href="malito:rayane15526@gmail.com" target="_blank">Email</a>
+                    <span class="contact-icon"><img src="assets/email.png" alt=""></span>
+                    <a href="mailto:rayane15526@gmail.com" target="_blank">Email</a>
                 </div>
                 <div class="contact-method">
-                    <span class="contact-icon">💼</span>
+                    <span class="contact-icon"><img src="assets/linkedin.png" alt="Linkedin"></span>
                     <a href="https://www.linkedin.com/in/rayane-fonseca-b84b272b0" target="_blank">Linkedin</a>
                 </div>
                 <div class="contact-method">
-                    <span class="contact-icon">🐙</span>
+                    <span class="contact-icon"><img src="assets/github.png" alt=""></span>
                     <a href="https://github.com/Rayane-Fonseca" target="_blank">Github</a>
                 </div>
             </div>
@@ -253,7 +253,6 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 Rayane Fonseca. Todos os direitos reservados.</p>
-            <p>Desenvolvido com ❤️ usando HTML, SCSS e Javascript</p>
         </div>
     </footer>
     <script src="main.js"></script>
