--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="assets/Icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -59,7 +59,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-placeholder"> 
-                    <span><img src="assets/Rayane.png" alt="MyPhoto"></span>
+                    <span><img src="assets/myphoto.png" alt="MyPhoto"></span>
                 </div>
             </div>
         </section>
