--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="skill-list">
                             <span class="skill-tag">HTML5</span>
                             <span class="skill-tag">CSS3</span>
-                            <span class="skill-tag">Javascript</span>
+                            <span class="skill-tag">JavaScript</span>
                         </div>
                     </div>
 
